# eda-ji

./: .gitignore  README.md  pyproject.toml
notebook/: Untitled.ipynb  practice.ipynb  president-speech.ipynb  test.ipynb
src/eda_ji/: cli.py
tests/: test_first.py
