[project]
name = "eda-ji"
version = "0.3.0"
description = "Default template for PDM package"
authors = [
    {name = "<jiwon1118>", email = "<b23386585@gmail.com>"},
]
dependencies = ["pandas>=2.2.3", "president-speech>=0.9.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[dependency-groups]
eda = [
    "jupyterlab>=4.3.4",
]
test = [
    "pytest>=8.3.4",
]
