[project]
name = "eda-ji"
version = "0.3.2"

description = "Default template for PDM package"
authors = [
    {name = "<jiwon1118>", email = "<b23386585@gmail.com>"},
]
dependencies = [
    "pandas>=2.2.3",
    "president-speech>=0.9.1",
    "typer>=0.15.1",
    "tqdm>=4.67.1",
    "tabulate>=0.9.0",
    "termplotlib>=0.3.9",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[project.scripts]
eda-ji = "eda_ji.cli:entry_point"


[dependency-groups]
test = [
    "pytest>=8.3.4",
]
eda = [
    "jupyterlab>=4.3.4",
]

